// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component should render Title component with props 1`] = `
<h1
  className="title"
>
  Test title
</h1>
`;

exports[`Title component should render Title component without props 1`] = `
<h1
  className="title"
>
  Simple title
</h1>
`;
